--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,8 +28,8 @@ jobs:
         TARGET: /home/${{ secrets.DEPLOY_SSH_USER }}/public_html/sveltean/
         VERBOSE: true
         USER: ${{ secrets.DEPLOY_SSH_USER }}
-        ARGS: --rsync-path=/home/${{ secrets.DEPLOY_SSH_USER }}/.local/bin/rsync
         SOURCE: ./dist/*
+        RUN_SCRIPT_ON: target
         PRE_SCRIPT: |
           rm -rf /home/${{ secrets.DEPLOY_SSH_USER }}/public_html/sveltean
           mkdir -p /home/${{ secrets.DEPLOY_SSH_USER }}/public_html/sveltean
